Horizontal scrolling fixed

--- a/docs/css/custom.css
+++ b/docs/css/custom.css
@@ -211,7 +211,7 @@ button{
 	width: 100%;
 	height: 100%;
 	display: flex;
-	flex-direction: column;
+	flex-direction: row;
 	justify-content: space-evenly;
 }
 #holiday-image-container{
@@ -281,7 +281,7 @@ button{
 	height: 110%;
 	padding: 0;
 	border: 5px solid #caf5a6;
-	box-shadow: 0px 1px 15px 1px rgba(0,0,0,0.3);
+	box-shadow: 0 1px 15px 1px rgba(0,0,0,0.3);
 }
 .special-img-inner{
     display: flex;
@@ -568,11 +568,6 @@ footer{
     box-shadow: 11px 7px 18px -6px rgba(0,0,0,0.5);
     cursor: pointer;
 }
-
-
-
-
-
 
 @media  screen and (min-width: 1199px) {
 	.center-div-first {
